test_programs/compile_failure/comptime_right_shift_overflow/src/main.nr
fn main(x: Field) -> pub Field {
    let y = comptime { 1 >> 32 };
    x + y as Field
}
